2003-11-15  Christophe Fergeau  <teuf@gnome.org>

	* docs/*
	* configure.in: added version number to the API docs start page
	  (fixes #126027)
	* libgnomevfs/gnome-vfs-utils.c: make copying/moving files to ncpfs
  	  file systems work again (fixes #97789), patch by radu@netsoft.ro
	* modules/http-method.c: don't print warning on empty PROPFIND
	  responses (fixes #125469, patch by Jan Kratochvil)
	* programs/gnomevfs-ls.c: don't print an error about EOF since EOF on
	  a directory listing only indicates that we finished reading the
	  directory

2003-11-14  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: removed GNOME_PLATFORM_GNOME_2 since it's deprecated

2003-11-13  Niall Power  <niall.power@sun.com>

	* libgnomevfs/gnome-vfs-unix-mounts.c:
	* libgnomevfs/gnome-vfs-cdrom.c:
	Solaris fixes
	
2003-11-12  Alexander Larsson  <alexl@redhat.com>

	* daemon/gnome-vfs-daemon.c: (gnome_vfs_daemon_factory):
	* libgnomevfs/gnome-vfs-unix-mounts.c:
	(_gnome_vfs_get_current_unix_mounts):
	* libgnomevfs/gnome-vfs-utils.c:
	* modules/cdda-method.c:
	* modules/ssh-method.c:
	FreeBSD fixes from Joe Marcus Clarke

2003-11-12  Christophe Fergeau  <teuf@gnome.org>

	* modules/http-method.c: ignore non significant white spaces in webdav
	messages. Fixes #118773. It may break some webdav servers, please file
	bugs or email me if you encounter some webdav breakage.

2003-11-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume.c (gnome_vfs_volume_handles_trash):
	Don't handle trash on read-only volumes.

2003-11-11  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c (create_vol_from_mount):
	Make sure volumes for user_visible drives are user_visible.

=== gnome-vfs 2.5.1 ===

2003-11-10  Alexander Larsson  <alexl@redhat.com>

	* test/test-volumes.c:
	Fix up build
	
2003-11-10  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	2.5.1

2003-11-06  Alexander Larsson  <alexl@redhat.com>
