@@ -1,12 +1,15 @@
 sgml
 html
-gnome-vfs-unused.txt
-gnome-vfs-decl-list.txt
-gnome-vfs-decl.txt
+gnome-vfs-2.0-unused.txt
+gnome-vfs-2.0-decl-list.txt
+gnome-vfs-2.0-decl.txt
+gnome-vfs-2.0.prerequisites
+gnome-vfs-2.0.interfaces
+gnome-vfs-2.0.signals
+gnome-vfs-2.0.args
+gnome-vfs-2.0.hierarchy
+gnome-vfs-2.0-undocumented.txt
+version.xml
+*.stamp
 Makefile.in
 Makefile
-gnome-vfs.signals
-gnome-vfs.args
-gnome-vfs.hierarchy
-*.stamp
-gnome-vfs-undocumented.txt
