@@ -8,3 +8,7 @@ gnome-vfs-file-size.h
 gnome-vfs-metadata.h
 gnome-vfs-metadata.c
 gnome-vfs-metadata-private.h
+GNOME_VFS_Daemon-common.c
+GNOME_VFS_Daemon-skels.c
+GNOME_VFS_Daemon-stubs.c
+GNOME_VFS_Daemon.h
