@@ -29,6 +29,7 @@ test-sync-create
 test-sync-write
 test-unlink
 test-uri
+test-volumes
 test-xfer
 test-callback
 test-module-selftest
